--- a/EasterEgg.html
+++ b/EasterEgg.html
@@ -13,7 +13,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎉 肖莹茜生日快乐 🎉</title>
+  title>🎉 某人生日快乐 
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <style>
